--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@
 
 .team-page{
     height: 100%;
-    /* align-items: center; */
+    align-items: center;
 }
 
 #our-team-title{
@@ -94,26 +94,20 @@
     gap: 2%;
     justify-content: center;
     align-items: center;
-
-    place-items: center;
 }
+
 .member{
     height: 14rem;
     width: 18rem;
     margin: 10%;
     background-color: rgb(33, 37, 41);
     border-radius: 5%;
-/* 
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-gap: 10px;
-    align-items: center; */
+
 
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-
 }
 
 .member img{
@@ -124,32 +118,47 @@
     border: 1px solid black;
 
     position: relative;
-    top: -30%;
+    top: -17%;
 
-    /* margin: 0 auto; */
+    margin-bottom: 10px;
 }
 
 .member p{
-    /* grid-row: 2; */
     text-align: center;
 
     position: relative;
-    top: -30%;
-    padding: 5px;
+    top: -15%;
+    margin: 0.3rem 0;
 
 }
 
 .member .member-name{
-    /* grid-row: 3; */
     color: #BD9F67;
     font-size: 1.5rem;
     font-weight: 600;
 }
 .member .member-position{
-    /* grid-row: 4; */
     color: white;
     font-size: 1.1rem;
     font-weight: 300;
+}
+
+.links{
+    font-size: 3rem;
+    margin-top: 1rem;
+    position: relative;
+    top: -17%;
+}
+.icon{
+    text-decoration: none;
+    color: #ffffff;
+    font-size: 2.5rem;
+    margin: 1rem 0.7rem;
+    transition: color 0.3s, transform 0.5s;
+}
+
+.icon:hover {
+    font-size: 3rem;
 }
 
 @media (max-width: 1100px) {
@@ -157,39 +166,3 @@
         grid-template-columns: repeat(2, 1fr);
     }
 }
-
-/* @media (max-width: 768px) {
-    .navbar {
-        flex-direction: column;
-    }
-
-    .nav-buttons ul {
-        flex-direction: column;
-        align-items: center;
-    }
-
-    .nav-buttons li {
-        margin: 5px 0;
-    }
-
-    .member {
-        width: 100%;
-        max-width: 300px;
-    }
-}
-*/
-/* Styles for screens smaller than 480px */
-/* 
-@media (max-width: 480px) {
-    .member img {
-        max-width: 100px;
-    }
-
-    .member .member-name {
-        font-size: 1.2rem;
-    }
-
-    .member .member-position {
-        font-size: 1rem;
-    }
-} */
