--- a/style.css
+++ b/style.css
@@ -1,12 +1,16 @@
 *{
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
-
+html, body{
+    height: 100%;
+    width: 100%;
+}
 
 .homepage{
     height: 93vh;
-
+    width: 100%;
     padding-top: 50px;
     display: flex;
     flex-direction: column;
@@ -71,7 +75,7 @@
 
 #mbm-logo-img{
     height: 40vh;
-    max-width: 100%;
+    width: 100%;
 }
 
 
@@ -94,8 +98,9 @@
     gap: 2%;
     justify-content: center;
     align-items: center;
-}
 
+    /* place-items: center; */
+}
 .member{
     height: 14rem;
     width: 18rem;
@@ -108,6 +113,10 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+
+    /* position: relative; */
+    /* overflow: hidden; */
+    /* padding-top: 2rem; Adjust padding to avoid overlap */
 }
 
 .member img{
@@ -124,20 +133,24 @@
 }
 
 .member p{
+    /* grid-row: 2; */
     text-align: center;
 
     position: relative;
     top: -15%;
+    /* padding: 5px; */
     margin: 0.3rem 0;
 
 }
 
 .member .member-name{
+    /* grid-row: 3; */
     color: #BD9F67;
     font-size: 1.5rem;
     font-weight: 600;
 }
 .member .member-position{
+    /* grid-row: 4; */
     color: white;
     font-size: 1.1rem;
     font-weight: 300;
@@ -166,3 +179,39 @@
         grid-template-columns: repeat(2, 1fr);
     }
 }
+
+/* @media (max-width: 768px) {
+    .navbar {
+        flex-direction: column;
+    }
+
+    .nav-buttons ul {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .nav-buttons li {
+        margin: 5px 0;
+    }
+
+    .member {
+        width: 100%;
+        max-width: 300px;
+    }
+}
+*/
+/* Styles for screens smaller than 480px */
+/* 
+@media (max-width: 480px) {
+    .member img {
+        max-width: 100px;
+    }
+
+    .member .member-name {
+        font-size: 1.2rem;
+    }
+
+    .member .member-position {
+        font-size: 1rem;
+    }
+} */
